--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <div class="work-card mix web">
                     <img src="Sanchay App.png" alt="" class="work-img">
                     <h3 class="work-title">App Design</h3>
-                    <span class="work-button">Demo<i class="uil uil-arrow-right work-button-icon"></i></span>
+                    <span class="work-button">Details<i class="uil uil-arrow-right work-button-icon"></i></span>
 
                     <div class="portfolio-item-details">
                         <h3 class="details-title">The services we provide for design</h3>
@@ -240,7 +240,7 @@
                 <div class="work-card mix app">
                     <img src="Sanchay App.png" alt="" class="work-img">
                     <h3 class="work-title">App Design</h3>
-                    <span class="work-button">Demo<i class="uil uil-arrow-right work-button-icon"></i></span>
+                    <span class="work-button">Details<i class="uil uil-arrow-right work-button-icon"></i></span>
 
                     <div class="portfolio-item-details">
                         <h3 class="details-title">Mobile App Lanfing Design & App Maintain</h3>
@@ -257,7 +257,7 @@
                 <div class="work-card mix design">
                     <img src="Usabilty Testing.png" alt="" class="work-img">
                     <h3 class="work-title">Brand Design</h3>
-                    <span class="work-button">Demo<i class="uil uil-arrow-right work-button-icon"></i></span>
+                    <span class="work-button">Details<i class="uil uil-arrow-right work-button-icon"></i></span>
 
                     <div class="portfolio-item-details">
                         <h3 class="details-title">Logo Design Creativity & Application</h3>
@@ -274,7 +274,7 @@
                 <div class="work-card mix app">
                     <img src="Healthcare App.png" alt="" class="work-img">
                     <h3 class="work-title">App Design</h3>
-                    <span class="work-button">Demo<i class="uil uil-arrow-right work-button-icon"></i></span>
+                    <span class="work-button">Details<i class="uil uil-arrow-right work-button-icon"></i></span>
 
                     <div class="portfolio-item-details">
                         <h3 class="details-title">Mobile App Landing Design & Services</h3>
@@ -291,7 +291,7 @@
                 <div class="work-card mix web">
                     <img src="Simple Ux Design.png" alt="" class="work-img">
                     <h3 class="work-title">Brand Design</h3>
-                    <span class="work-button">Demo<i class="uil uil-arrow-right work-button-icon"></i></span>
+                    <span class="work-button">Details<i class="uil uil-arrow-right work-button-icon"></i></span>
 
                     <div class="portfolio-item-details">
                         <h3 class="details-title">Design for Technology & Services</h3>
@@ -308,7 +308,7 @@
                 <div class="work-card mix design">
                     <img src="voice user interface.png" alt="" class="work-img">
                     <h3 class="work-title">Web Design</h3>
-                    <span class="work-button">Demo<i class="uil uil-arrow-right work-button-icon"></i></span>
+                    <span class="work-button">Details<i class="uil uil-arrow-right work-button-icon"></i></span>
 
                     <div class="portfolio-item-details">
                         <h3 class="details-title">App for Technology & Services</h3>
